# llmengine

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
docs/: design.md  runtime_flows.md  third_party.md
examples/: benchmark_cpu.cpp  benchmark_cuda.cpp  benchmark_flash_attention.cpp  build_tiny_llama_graph.cpp  forward_tiny_llama.cpp  forward_tiny_llama_gguf.cpp  forward_tiny_llama_gguf_cuda.cpp  generate.cpp  generate_cuda.cpp  generate_paged.cpp
include/minillm/: minillm.h
include/minillm/core/: device.h  dtype.h  shape.h  status.h  tensor.h  tensor_view.h
include/minillm/graph/: attribute.h  graph.h  graph_builder.h  node.h  op_type.h  shape_infer.h  value.h
include/minillm/io/: bpe_tokenizer.h  gguf_format.h  gguf_parser.h  gguf_weight_loader.h
include/minillm/model/: transformer_graph_builder.h
include/minillm/runtime/: allocator.h  backend.h  continuous_batch_scheduler.h  cpu_backend.h  cpu_kernels.h  cpu_simd.h  cuda_backend.h  cuda_kernels.h  executor.h  kernel_adapter_common.h  kernel_registry.h  kv_cache.h  memory_planner.h  paged_attention_scheduler.h  paged_kv_cache.h  runtime_context.h  sampler.h
include/minillm/runtime/cache/: paged_attention_scheduler.h
include/minillm/runtime/kernels/: cpu_kernel_adapter.h  cpu_kernels.h  cpu_kernels_bf16.h  cpu_simd.h  cuda_kernel_adapter.h  cuda_kernels.h  kernel_adapter_common.h
include/minillm/utils/: bfloat16.hpp
scripts/: compare_llama_completion.py
src/core/: device.cpp  dtype.cpp  shape.cpp  status.cpp  tensor.cpp
src/graph/: attribute.cpp  graph.cpp  graph_builder.cpp  node.cpp  op_type.cpp  shape_infer.cpp  value.cpp
src/io/: bpe_tokenizer.cpp  gguf_format.cpp  gguf_parser.cpp  gguf_weight_loader.cpp
src/model/: transformer_graph_builder.cpp
src/runtime/: allocator.cpp  backend.cpp  continuous_batch_scheduler.cpp  cpu_backend.cpp  cpu_kernel_adapter.cpp  cpu_kernels.cpp  cpu_kernels_bf16.cpp  cuda_backend.cpp  cuda_kernel_adapter.cpp  cuda_kernels.cu  executor.cpp  kernel_registry.cpp  kv_cache.cpp  memory_planner.cpp  paged_attention_scheduler.cpp  paged_kv_cache.cpp  runtime_context.cpp  sampler.cpp
src/runtime/cache/: kv_cache.cpp  paged_attention_scheduler.cpp  paged_kv_cache.cpp
src/runtime/kernels/: cpu_kernel_adapter.cpp  cpu_kernels.cpp  cpu_kernels_bf16.cpp  cuda_kernel_adapter.cpp  cuda_kernels.cu
tests/: dump_tokens.cpp  test_bpe_tokenizer.cpp  test_continuous_batch_scheduler.cpp  test_cpu_kernels.cpp  test_cpu_kernels_bf16.cpp  test_cuda_kernels.cpp  test_e2e_verification.cpp  test_gguf_parser.cpp  test_graph.cpp  test_graph_builder.cpp  test_memory_planner.cpp  test_paged_attention_scheduler.cpp  test_paged_kv_cache.cpp  test_runtime.cpp  test_shape.cpp  test_tensor.cpp  test_transformer_graph_builder.cpp
